syntax = "proto3";

package proto;

message GetRequest {
	int64 user_id = 1;
};

message BalanceResponse {
	int64 value = 1;
};

message BalanceRecord {
	int64 user_id = 1;
	int64 value = 2;
}

message AllResponse {
	repeated BalanceRecord records = 1;
}

message IncrementRequest {
	int64 user_id = 1;
	int64 amount = 2;
};

message SetRequest {
	int64 user_id = 1;
	int64 value = 2;
};

message AllRequest {};

service BalanceStorage {
	rpc Get(GetRequest) returns (BalanceResponse);
	rpc Increment(IncrementRequest) returns (BalanceResponse);
	rpc Set(SetRequest) returns (BalanceResponse);
	rpc All(AllRequest) returns (AllResponse);
};